--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "adonis": "^0.9.0",
-    "pg": "^7.11.0"
+    "pg": "^7.11.0",
+    "url-parse": "^1.4.7"
   },
   "devDependencies": {},
   "autoload": {
