--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "adonis": "^0.9.0",
+    "email-templates": "^5.1.0",
+    "handlebars": "^4.1.2",
+    "nodemailer": "^6.2.1",
     "pg": "^7.11.0",
     "url-parse": "^1.4.7"
   },
