--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "adonis": "^0.9.0",
     "handlebars": "^4.1.2",
     "mailgun-js": "^0.22.0",
+    "nodemailer": "^6.2.1",
     "pg": "^7.11.0",
     "url-parse": "^1.4.7"
   },
